--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --ec true --port 4201",
-        "build": "ng build --prod",
+        "start": "ng serve",
+        "build": "ng build",
         "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-4/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
