--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sb-admin-cli-update",
+    "name": "donde-estaciono-web",
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
@@ -29,7 +29,14 @@
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
         "rxjs": "^5.1.0",
-        "zone.js": "^0.8.4"
+        "zone.js": "^0.8.4",
+        "angular2-text-mask": "^8.0.1",
+        "angular-datatables": "^4.0.0",
+        "datatables.net": "^1.10.15",
+        "datatables.net-bs": "^1.10.15",
+        "datatables.net-buttons": "^1.3.1",
+        "datatables.net-buttons-bs": "^1.3.1",
+        "jquery": "^3.2.1"
     },
     "devDependencies": {
         "@angular/cli": "1.2.1",
@@ -37,6 +44,8 @@
         "@angular/language-service": "^4.3.1",
         "@types/jasmine": "2.5.45",
         "@types/node": "~6.0.60",
+        "@types/datatables.net": "^1.10.1",
+        "@types/jquery": "^2.0.41",
         "codelyzer": "~3.0.1",
         "jasmine-core": "~2.6.2",
         "jasmine-spec-reporter": "~4.1.0",
