Fix id parque Admin panel - API call

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
-        "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-4/master/dist/",
-        "deploy": "ng build --prod --base-href https://nahuelgoldy.github.io/pf-webapp/ && angular-cli-ghpages --branch gh-pages",
+        "gitbuild": "ng build --prod --base /pf-webapp/master/dist/",
+        "deploy": "ng build --prod --base-href https://nahuelgoldy.github.io/pf-webapp/ && ngh --branch master",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
