--- a/package.json
+++ b/package.json
@@ -26,18 +26,19 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
         "@ngx-translate/core": "^7.0.0",
         "@ngx-translate/http-loader": "^0.1.0",
-        "core-js": "^2.4.1",
-        "font-awesome": "^4.7.0",
-        "ng2-charts": "^1.6.0",
-        "rxjs": "^5.1.0",
-        "zone.js": "^0.8.4",
-        "angular2-text-mask": "^8.0.1",
         "angular-datatables": "^4.0.0",
+        "angular2-text-mask": "^8.0.1",
+        "core-js": "^2.4.1",
         "datatables.net": "^1.10.15",
         "datatables.net-bs": "^1.10.15",
         "datatables.net-buttons": "^1.3.1",
         "datatables.net-buttons-bs": "^1.3.1",
-        "jquery": "^3.2.1"
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.2.1",
+        "mydatepicker": "^2.0.31",
+        "ng2-charts": "^1.6.0",
+        "rxjs": "^5.1.0",
+        "zone.js": "^0.8.4"
     },
     "devDependencies": {
         "@angular/cli": "1.2.1",
