Se borraron los ^, para evitar problemas de versiones

--- a/package.json
+++ b/package.json
@@ -14,49 +14,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.4.6",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.7",
-    "@ngx-translate/core": "^7.2.2",
-    "@ngx-translate/http-loader": "^0.1.0",
-    "angular-datatables": "^4.4.0",
-    "angular2-text-mask": "^8.0.1",
-    "core-js": "^2.5.1",
-    "datatables.net": "^1.10.15",
-    "datatables.net-bs": "^1.10.15",
-    "datatables.net-buttons": "^1.4.2",
-    "datatables.net-buttons-bs": "^1.4.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.2.1",
-    "mydatepicker": "^2.0.32",
-    "ng2-charts": "^1.6.0",
-    "rxjs": "^5.5.0",
-    "zone.js": "^0.8.18"
+    "@angular/animations": "4.4.6",
+    "@angular/common": "4.4.6",
+    "@angular/compiler": "4.4.6",
+    "@angular/core": "4.4.6",
+    "@angular/forms": "4.4.6",
+    "@angular/http": "4.4.6",
+    "@angular/platform-browser": "4.4.6",
+    "@angular/platform-browser-dynamic": "4.4.6",
+    "@angular/router": "4.4.6",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-beta.5",
+    "@ngx-translate/core": "7.2.2",
+    "@ngx-translate/http-loader": "0.1.0",
+    "angular-datatables": "4.4.0",
+    "angular2-text-mask": "8.0.1",
+    "core-js": "2.5.1",
+    "datatables.net": "1.10.15",
+    "datatables.net-bs": "1.10.15",
+    "datatables.net-buttons": "1.4.2",
+    "datatables.net-buttons-bs": "1.4.2",
+    "font-awesome": "4.7.0",
+    "jquery": "3.2.1",
+    "mydatepicker": "2.0.32",
+    "ng2-charts": "1.6.0",
+    "rxjs": "5.5.0",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "1.2.1",
-    "@angular/compiler-cli": "^4.4.6",
-    "@angular/language-service": "^4.4.6",
-    "@types/datatables.net": "^1.10.1",
+    "@angular/compiler-cli": "4.4.6",
+    "@angular/language-service": "4.4.6",
+    "@types/datatables.net": "1.10.1",
     "@types/jasmine": "2.5.45",
-    "@types/jquery": "^2.0.41",
-    "@types/node": "^6.0.90",
+    "@types/jquery": "2.0.41",
+    "@types/node": "6.0.90",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "^1.7.1",
+    "karma": "1.7.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-coverage-istanbul-reporter": "1.2.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
